--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,18 +1,20 @@
 <mat-card class="login-card">
-    <h1>Login</h1>
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Email</mat-label>
-        <input matInput type="email" formControlName="email" placeholder="Email" required />
-      </mat-form-field>
-  
-      <mat-form-field appearance="fill" class="full-width">
-        <mat-label>Password</mat-label>
-        <input matInput type="password" formControlName="password" placeholder="Password" required />
-      </mat-form-field>
-  
-      <button mat-raised-button color="primary" class="full-width" type="submit">
-        Login
-      </button>
-    </form>
+  <div class="header">
+    <mat-icon class="icon" color="accent">flight_takeoff</mat-icon>
+  </div>
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email" placeholder="Email" required />
+    </mat-form-field>
+
+    <mat-form-field appearance="fill" class="full-width">
+      <mat-label>Password</mat-label>
+      <input matInput type="password" formControlName="password" placeholder="Password" required />
+    </mat-form-field>
+
+    <button mat-raised-button color="accent" class="full-width" type="submit">
+      Login
+    </button>
+  </form>
 </mat-card>
