--- a/src/app/components/approver/approver-trip-list.component.html
+++ b/src/app/components/approver/approver-trip-list.component.html
@@ -1,53 +1,34 @@
-<h2>Approver Trips</h2>
 
 <table mat-table [dataSource]="trips" class="mat-elevation-z8">
   
   <!-- Trip Name Column -->
-  <ng-container matColumnDef="tripName">
+  <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Trip Name </th>
-    <td mat-cell *matCellDef="let trip" (click)="openTripStepper(trip)"> > {{ trip.tripName }} </td>
+    <td mat-cell *matCellDef="let trip" (click)="openTripStepper(trip)"> {{ trip.name }} </td>
   </ng-container>
   
   <!-- Trip Duration Column -->
-  <ng-container matColumnDef="tripDuration">
+  <ng-container matColumnDef="duration">
     <th mat-header-cell *matHeaderCellDef> Duration </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.tripDuration }} </td>
+    <td mat-cell *matCellDef="let trip"> {{ trip.duration }} days </td>
   </ng-container>
   
   <!-- Start Date Column -->
-  <ng-container matColumnDef="tripStartDate">
+  <ng-container matColumnDef="startDate">
     <th mat-header-cell *matHeaderCellDef> Start Date </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.tripStartDate | date:'shortDate' }} </td>
+    <td mat-cell *matCellDef="let trip"> {{ trip.startDate | date:'shortDate' }} </td>
   </ng-container>
   
   <!-- End Date Column -->
-  <ng-container matColumnDef="tripEndDate">
+  <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef> End Date </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.tripEndDate | date:'shortDate' }} </td>
+    <td mat-cell *matCellDef="let trip"> {{ trip.endDate | date:'shortDate' }} </td>
   </ng-container>
-  
-  <!-- Car Name Column -->
-  <ng-container matColumnDef="carName">
-    <th mat-header-cell *matHeaderCellDef> Car </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.carName }} </td>
-  </ng-container>
-  
-  <!-- Hotel Name Column -->
-  <ng-container matColumnDef="hotelName">
-    <th mat-header-cell *matHeaderCellDef> Hotel </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.hotelName }} </td>
-  </ng-container>
-  
-  <!-- Airline Column -->
-  <ng-container matColumnDef="flightAirline">
-    <th mat-header-cell *matHeaderCellDef> Airline </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.flightAirline }} </td>
-  </ng-container>
-  
-  <!-- Total Price Column -->
-  <ng-container matColumnDef="totalPrice">
-    <th mat-header-cell *matHeaderCellDef> Total Price </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.totalPrice | currency }} </td>
+
+   <!-- Status Column -->
+   <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef> Status </th>
+    <td mat-cell *matCellDef="let trip"> {{ trip.status }} </td>
   </ng-container>
 
   <!-- Header and Row Definitions -->
