--- a/src/app/components/finance/finance-trip-list.component.css
+++ b/src/app/components/finance/finance-trip-list.component.css
@@ -1,40 +1,37 @@
-/* Container for the trip list */
 .trip-list-container {
     margin: 30px auto;
     padding: 20px;
-    background-color: #faf3e0;  /* Soft beige */
     border-radius: 8px;
     max-width: 1100px;
     box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
   }
   
-  /* Table title */
+
   .table-title {
     text-align: center;
     font-size: 28px;
     margin-bottom: 20px;
-    color: #e57373; /* Soft peach color */
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat !important';
   }
   
-  /* Styling for the mat-table */
+
   .mat-table {
-    width: 100%;
+    width: 90%;
+    margin: 0 auto;
+    margin-top: 100px;
     border-collapse: collapse;
   }
   
-  /* Header and Cells */
+
   .mat-header-cell, .mat-cell {
     padding: 12px 15px;
     text-align: center;
     font-size: 16px;
     color: #555;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Montserrat !important';
   }
   
   .mat-header-cell {
-    background-color: #ffe0b2; /* Light peach background */
-    color: #d32f2f;  /* Dark red for headers */
     font-weight: bold;
   }
   
@@ -43,12 +40,12 @@
   }
   
   .mat-row:hover {
-    background-color: #fff3e0;  /* Light peach background on hover */
+    background-color: #fff3e0;  
   }
   
-  /* Action button styling */
+
   button {
-    background-color: #ff7043; /* Warm orange */
+    background-color: #ff7043; 
     color: white;
     font-size: 14px;
     border-radius: 4px;
@@ -58,22 +55,61 @@
   }
   
   button:hover {
-    background-color: #d32f2f; /* Darker red on hover */
+    background-color: #d32f2f;
   }
   
   .mat-elevation-z8 {
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
   }
-  
-  /* Responsive Table */
-  @media (max-width: 768px) {
-    .mat-header-cell, .mat-cell {
-      padding: 10px 8px;
-      font-size: 14px;
-    }
-  
-    .table-title {
-      font-size: 22px;
-    }
+
+
+  .dialog-container {
+    padding: 16px;
+    text-align: center;
   }
+  
+  .dialog-title {
+    font-size: 1.2rem;
+    font-weight: 500;
+    margin-bottom: 12px;
+    color: #333;
+  }
+  
+  .dialog-content {
+    font-size: 1rem;
+    color: #555;
+    margin-bottom: 16px;
+  }
+  
+  .dialog-content p {
+    margin: 0;
+  }
+  
+  .dialog-actions {
+    display: flex;
+    justify-content: center;
+    gap: 6px;
+  }
+  
+  .dialog-btn {
+    font-size: 0.9rem;
+    padding: 0px 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    background: #414143;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+  
+  .dialog-btn:hover {
+    background: #e0e0e0;
+  }
+  
+  .confirm-btn {
+    border-color: #bbb;
+  }
+  
+  
+  
+  
   
