--- a/src/app/components/finance/finance-trip-list.component.html
+++ b/src/app/components/finance/finance-trip-list.component.html
@@ -1,81 +1,63 @@
-<table mat-table [dataSource]="trips" class="custom-trip-table">
-    <!-- Trip Name Column -->
-    <ng-container matColumnDef="tripName">
-      <th mat-header-cell *matHeaderCellDef> Trip Name </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.tripName}} </td>
-    </ng-container>
-  
-    <!-- Trip Duration Column -->
-    <ng-container matColumnDef="tripDuration">
-      <th mat-header-cell *matHeaderCellDef> Trip Duration </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.tripDuration}} </td>
-    </ng-container>
-  
-    <!-- Trip Start Date Column -->
-    <ng-container matColumnDef="tripStartDate">
-      <th mat-header-cell *matHeaderCellDef> Start Date </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.tripStartDate | date}} </td>
-    </ng-container>
-  
-    <!-- Trip End Date Column -->
-    <ng-container matColumnDef="tripEndDate">
-      <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.tripEndDate | date}} </td>
-    </ng-container>
-  
-    <!-- Car Name Column -->
-    <ng-container matColumnDef="carName">
-      <th mat-header-cell *matHeaderCellDef> Car Name </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.carName}} </td>
-    </ng-container>
-  
-    <!-- Hotel Name Column -->
-    <ng-container matColumnDef="hotelName">
-      <th mat-header-cell *matHeaderCellDef> Hotel Name </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.hotelName}} </td>
-    </ng-container>
-  
-    <!-- Flight Airline Column -->
-    <ng-container matColumnDef="flightAirline">
-      <th mat-header-cell *matHeaderCellDef> Flight Airline </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.flightAirline}} </td>
-    </ng-container>
-  
-    <!-- Total Price Column -->
-    <ng-container matColumnDef="totalPrice">
-      <th mat-header-cell *matHeaderCellDef> Total Price </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.totalPrice}} </td>
-    </ng-container>
-  
-    <!-- Status Column -->
-    <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let trip"> {{trip.status}} </td>
-    </ng-container>
-  
-    <!-- Action Column -->
-    <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef> Action </th>
-      <td mat-cell *matCellDef="let trip" class="action-icons">
-        <mat-icon
-          *ngIf="trip.status === 'Approved'"
-          class="action-icon"
-          matTooltip="Mark as Refunded"
-          (click)="markAsRefunded(trip)"
-          >reply</mat-icon
-        >
-        <mat-icon
-          *ngIf="trip.status === 'Approved'"
-          class="action-icon"
-          matTooltip="Mark as In Process"
-          (click)="markAsInProcess(trip)"
-          >hourglass_empty</mat-icon
-        >
-      </td>
-    </ng-container>
-  
-    <!-- Table Header and Row -->
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
-  
+<table mat-table [dataSource]="trips" class="mat-elevation-z8">
+  <!-- Trip Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Trip Name </th>
+    <td mat-cell *matCellDef="let trip"> {{trip.name}} </td>
+  </ng-container>
+
+  <!-- Trip Duration Column -->
+  <ng-container matColumnDef="duration">
+    <th mat-header-cell *matHeaderCellDef> Trip Duration </th>
+    <td mat-cell *matCellDef="let trip"> {{trip.duration}} days </td>
+  </ng-container>
+
+  <!-- Trip Start Date Column -->
+  <ng-container matColumnDef="startDate">
+    <th mat-header-cell *matHeaderCellDef> Start Date </th>
+    <td mat-cell *matCellDef="let trip"> {{trip.startDate | date}} </td>
+  </ng-container>
+
+  <!-- Trip End Date Column -->
+  <ng-container matColumnDef="endDate">
+    <th mat-header-cell *matHeaderCellDef> End Date </th>
+    <td mat-cell *matCellDef="let trip"> {{trip.endDate | date}} </td>
+  </ng-container>
+
+  <!-- Status Column -->
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef> Status </th>
+    <td mat-cell *matCellDef="let trip" style="text-transform: capitalize;"> {{ trip.status }} </td>
+  </ng-container>
+
+
+  <!-- Action Column -->
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef> Action </th>
+    <td mat-cell *matCellDef="let trip" class="action-icons">
+      <mat-icon *ngIf="trip.status === 'APPROVED'" class="action-icon" matTooltip="Mark as Refunded"
+        (click)="markTripAsRefunded(trip)">monetization_on</mat-icon>
+      <mat-icon *ngIf="trip.status === 'APPROVED'" class="action-icon" matTooltip="Mark as In Process"
+        (click)="markAsInProcess(trip)">sync</mat-icon>
+    </td>
+  </ng-container>
+
+  <!-- Table Header and Row -->
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
+
+<ng-template #confirmDialogTemplate let-dialog>
+  <div class="dialog-container">
+    <h2 mat-dialog-title class="dialog-title">Confirmation</h2>
+    <mat-dialog-content class="dialog-content">
+      <p>Are you sure you want to mark this trip as <strong>Refunded</strong>?</p>
+    </mat-dialog-content>
+    <mat-dialog-actions align="end" class="dialog-actions">
+      <button mat-button class="dialog-btn" (click)="closeDialog(false)">Cancel</button>
+      <button mat-button class="dialog-btn confirm-btn" (click)="closeDialog(true)">Confirm</button>
+    </mat-dialog-actions>
+  </div>
+</ng-template>
+
+
