--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,12 +1,15 @@
-.app-header {
+ .app-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     align-items: center;
   }
   
   .user-name {
-    font-size: 16px;
+    font-family: 'Montserrat';
     font-weight: bold;
+    font-size: 21px;
+    padding-right: 18px;
+    
   }
   
   .spacer {
