--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -4,8 +4,8 @@
   </div>
   <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
     <mat-form-field appearance="fill" class="full-width">
-      <mat-label>Email</mat-label>
-      <input matInput type="email" formControlName="email" placeholder="Email" required />
+      <mat-label>Username</mat-label>
+      <input matInput type="email" formControlName="username" placeholder="Username" required />
     </mat-form-field>
 
     <mat-form-field appearance="fill" class="full-width">
