--- a/src/app/components/approver/approver-trip-list.component.html
+++ b/src/app/components/approver/approver-trip-list.component.html
@@ -28,7 +28,9 @@
    <!-- Status Column -->
    <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let trip"> {{ trip.status }} </td>
+    <td mat-cell *matCellDef="let trip"> 
+      {{ trip.status.charAt(0).toUpperCase() + trip.status.slice(1).toLowerCase() }}
+    </td>
   </ng-container>
 
   <!-- Header and Row Definitions -->
