--- a/src/app/components/approver/approver-trip-list.component.html
+++ b/src/app/components/approver/approver-trip-list.component.html
@@ -1,36 +1,41 @@
-
 <table mat-table [dataSource]="trips" class="mat-elevation-z8">
-  
+
   <!-- Trip Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef> Trip Name </th>
     <td mat-cell *matCellDef="let trip" (click)="openTripStepper(trip)"> {{ trip.name }} </td>
   </ng-container>
-  
+
   <!-- Trip Duration Column -->
   <ng-container matColumnDef="duration">
     <th mat-header-cell *matHeaderCellDef> Duration </th>
     <td mat-cell *matCellDef="let trip"> {{ trip.duration }} days </td>
   </ng-container>
-  
+
   <!-- Start Date Column -->
   <ng-container matColumnDef="startDate">
     <th mat-header-cell *matHeaderCellDef> Start Date </th>
     <td mat-cell *matCellDef="let trip"> {{ trip.startDate | date:'shortDate' }} </td>
   </ng-container>
-  
+
   <!-- End Date Column -->
   <ng-container matColumnDef="endDate">
     <th mat-header-cell *matHeaderCellDef> End Date </th>
     <td mat-cell *matCellDef="let trip"> {{ trip.endDate | date:'shortDate' }} </td>
   </ng-container>
 
-   <!-- Status Column -->
-   <ng-container matColumnDef="status">
+  <!-- Status Column -->
+  <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef> Status </th>
-    <td mat-cell *matCellDef="let trip"> 
+    <td mat-cell *matCellDef="let trip">
       {{ trip.status.charAt(0).toUpperCase() + trip.status.slice(1).toLowerCase() }}
     </td>
+  </ng-container>
+
+  <!-- Notes Column -->
+  <ng-container matColumnDef="notes">
+    <th mat-header-cell *matHeaderCellDef> Notes </th>
+    <td mat-cell *matCellDef="let trip"> {{ trip.notes }} </td>
   </ng-container>
 
   <!-- Header and Row Definitions -->
